Fixed Horizontal scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,14 @@
   font-family: "articulat-cf", sans-serif;
 }
 
+
+
+.u-h2{
+  font-size: 30px;
+  font-weight: 800;
+}
+
+.u-body{
+  font-size: 18px;
+  font-weight: 400;
+}
